Fix header margins on mobile

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -311,7 +311,7 @@ article, main {
     margin-bottom: 2rem;
   }
 
-  main {
+  article, main {
     header {
       margin-bottom: 2rem;
     }
